removed creating ServiceMeshMemberRoll + readme edits

--- a/ansible/roles/ocp4-workload-istio-tutorial-student/tasks/workload.yml
+++ b/ansible/roles/ocp4-workload-istio-tutorial-student/tasks/workload.yml
@@ -21,20 +21,21 @@
       metadata:
         name: "{{ smcp_project_name }}"
 
-- name: Create smmr to specify that {{ smcp_project_name }} belongs to smcp at {{ smcp_project_name }}
-  k8s:
-    state: present
-    namespace: "{{ smcp_project_name }}"
-    definition:
-      apiVersion: maistra.io/v1
-      kind: ServiceMeshMemberRoll
-      metadata:
-        name: default
-      spec:
-        members:
-        # a list of projects that should be joined into the service mesh
-        # for example, to add the bookinfo project
-        - "{{ smcp_project_name }}"
+# not required - same project name as parent
+# - name: Create smmr to specify that {{ smcp_project_name }} belongs to smcp at {{ smcp_project_name }}
+#   k8s:
+#     state: present
+#     namespace: "{{ smcp_project_name }}"
+#     definition:
+#       apiVersion: maistra.io/v1
+#       kind: ServiceMeshMemberRoll
+#       metadata:
+#         name: default
+#       spec:
+#         members:
+#         # a list of projects that should be joined into the service mesh
+#         # for example, to add the bookinfo project
+#         - "{{ smcp_project_name }}"
 
 - name: create the customer service
   k8s:
